# GPT-2.5

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  corpus.txt  evals.csv  hellaswag.py  hyperparam_search.py  model.py  pyproject.toml  setup.sh  tinystories_merges.txt  tinystories_vocab.json  tokenize_dataset.py  tokenizer.ipynb  tokenizer.py  train.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: tokenizer-checkpoint.ipynb
data/src/: split_fineweb.py  tokenize_dataset.py
evals/: post_optimization_inference_benchmarks.json  pre_optimization_inference_benchmarks.json
model/: model.ipynb  model.py
output/post_training/itskoma__GPT2.5/: results_2026-03-21T23-21-30.934403.json  results_2026-03-22T00-09-21.478555.json  samples_piqa_2026-03-21T23-21-30.934403.jsonl  samples_winogrande_2026-03-22T00-09-21.478555.jsonl
output/pretraining/itskoma__GPT2.5/: results_2026-03-21T23-12-16.145197.json  results_2026-03-22T00-28-29.862106.json  samples_piqa_2026-03-21T23-12-16.145197.jsonl  samples_winogrande_2026-03-22T00-28-29.862106.jsonl
post_train/: chat.py  model.py  tune.py
posttrain/: check.py  data.py  model.py  tune.py
pre_train/: hellaswag.py  model.py  train.py
pretrain/: hellaswag.py  model.py  train.py
serving/: benchmark_inference.py  inference.py  main.py  pyproject.toml
serving/app/: inference.py  main.py
serving/app/static/: app.js  index.html
serving/evals/: post_optimization_inference_benchmarks.json  torch_compile_baseline_inference_benchmarks.json  torch_compile_enabled_inference_benchmarks.json
serving/static/: app.css  app.js  index.html
serving/tests/: conftest.py  test_benchmark_inference.py  test_inference.py  test_main.py  test_packaging.py
tests/: test_hellaswag.py  test_posttrain_chat.py  test_posttrain_data.py  test_posttrain_model.py  test_posttrain_tune.py
tokenizer/: split_fineweb.py  tokenize_dataset.py  tokenizer.ipynb  tokenizer.py  train_tokenizer.py  write_fineweb.py
training/: pyproject.toml
training/data/src/: tokenize_dataset.py  write_fineweb.py
training/my_gpt_model/: __init__.py  config.json  configuration_gpt25.py  modeling_gpt25.py
training/post_train/: chat.py  model.py  tune.py
training/pre_train/: hellaswag.py  model.py  train.py
training/tests/: test_my_gpt_model.py  test_packaging.py  test_posttrain_chat.py  test_posttrain_model.py  test_posttrain_tune.py  test_tokenizer.py
training/tokenizer/: tokenizer.py  train_tokenizer.py
