[project]
name = "gpt-2-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "deepeval>=3.8.3",
    "detect-secrets>=1.5.0",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.3.4",
    "jupyter>=1.1.1",
    "lab>=8.5",
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "regex>=2025.11.3",
    "ruff>=0.15.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=5.2.0",
    "wandb>=0.23.1",
]

[tool.setuptools.packages.find]
include = ["posttrain*", "pretrain*", "tokenizer*"]
exclude = ["checkpoints*", "data*", "dist*", "tests*", "trainer_output*", "wandb*"]
namespaces = true
