[project]
name = "serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "torch>=2.9.1,<2.10",
    "transformers==5.2.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
gpu = [
    "flash-attn>=2.8.3; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv]
extra-build-variables = { flash-attn = { MAX_JOBS = "2", NVCC_THREADS = "1" } }
